syntax = "proto3";

option java_package = "protos";
option java_outer_classname = "Node";

message NodeDetails{
  string hostname = 1;
  string ip = 2;
  int32 port = 3;
}